Copy editing for CRAN submission.

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 [![CRAN_Status_Badge](https://img.shields.io/cran/v/r2mlm)](https://cran.r-project.org/package=r2mlm)
 <!-- badges: end -->
 
-r2mlm generates R-squared measures for multilevel models, based on the framework described in [Rights & Sterba (2019)](https://psycnet.apa.org/record/2018-32178-001). You provide a multilevel model generated using [lme4](https://cran.r-project.org/web/packages/lme4/index.html) or [nlme](https://cran.r-project.org/web/packages/nlme/index.html), and r2mlm outputs both total- and level-specific variance explained. 
+The r2mlm package contains functions that compute a framework of total and level-specific R-squared measures for multilevel models, with accompanying plots; these plots allow interpreting and visualizing all of the measures together as an integrated set. The framework of R-squared measures subsumes and analytically relates 10 previously-developed measures as special cases of 5 measures from this framework, as well as provides several new measures. The framework is presented in Rights & Sterba (2019) for evaluating a single fitted multilevel model. The implementation of this framework of measures for comparing multilevel models using R-squared differences is described in Rights & Sterba (2020). The functions in this package allow users to input either model objects obtained from [lme4](https://cran.r-project.org/web/packages/lme4/index.html) or [nlme](https://cran.r-project.org/web/packages/nlme/index.html), or to manually input model parameter estimates.
 
 ## Installation
 
@@ -37,13 +37,13 @@ devtools::install_github("mkshaw/r2mlm")
 ```
 ## Example
 
-As an example, say you have a dataset of teachers clustered within schools. Your model has teacher job satisfaction as the outcome, predicted by teacher salary (within-school, level 1 variable) and student-teacher ratio (between-school, level 2 variable).
+Suppose you have a dataset consisting of teachers nested within schools. A researcher could specify a multilevel model with teacher job satisfaction as the outcome, which is predicted by the level-1 predictor teacher salary (here school-mean-centered) and the level-2 predictor student-teacher ratio. Suppose the multilevel model included a random intercept as well as a random slope of teacher salary, and included normally-distributed, homoscedastic level-1 residuals. The researcher could then obtain the following output (see r2mlm function for further details). 
 
 ```{r example}
 library(r2mlm)
 
 # Generate the model, in this case with lme4:
-model <- lmer(satisfaction ~ 1 + salary_c + s_t_ratio + (1 | schoolID), data = teachsat, REML = TRUE)
+model <- lmer(satisfaction ~ 1 + salary_c + s_t_ratio + (1 + salary_c | schoolID), data = teachsat, REML = TRUE)
 
 # Generate R-squared measures for that model:
 r2mlm(model)
@@ -53,10 +53,10 @@ r2mlm(model)
 
 There are two main functions currently available in r2mlm:
 
-1. `r2mlm()`, for computing variance explained for a single model.
-2. `r2mlm_comp()`, for comparing variance explained between two different models.
+1. `r2mlm()`, for computing variance explained for a single multilevel model.
+2. `r2mlm_comp()`, for comparing variance explained between two different multilevel models.
 
-In some cases, you might run a model that will not converge in `nlme` or `lme4`, but will converge in another software (e.g., HLM, Mplus). If you run your model and have the associated output, you can manually generate R-squared measures using `r2mlm_manual()` or `r2mlm_comp_manual()`. For manual entry details, see the help pages:
+In some cases, you might run a multilevel model that will not converge in `nlme` or `lme4`, but will converge in another software package (e.g., HLM, Mplus). If you run your model and obtain the associated output, you can manually generate R-squared measures using `r2mlm_manual()` or `r2mlm_comp_manual()`. For manual entry details, see the help pages:
 
 ``` r
 ?r2mm_manual()
@@ -69,6 +69,12 @@ This framework of variance explained assumes the following:
 
 1. Two-level multilevel linear models (3 or more levels not supported at this time);
 2. Normal outcome variable;
-3. Homoscedastic residual variances at both level 1 and level 2;
-4. Level-1 predictors are centered within cluster.
+3. Homoscedastic residual variances at both level 1 and level 2.
+
+## References
+
+Rights, J. D., & Sterba, S. K. (2019). Quantifying explained variance in multilevel models: An integrative framework for defining R-squared measures. *Psychological Methods*, *24*(3), 309–338. https://doi.org/10.1037/met0000184 
+
+Rights, J. D., & Sterba, S. K. (2020). New recommendations on the use of R-squared differences in multilevel model comparisons. *Multivariate Behavioral Research*. https://doi.org/10.1080/00273171.2019.1660605
+
 
